# SwissClim_Evaluations

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  environment.yml  eval_configs.txt  eval_multiprog.conf  launchscript.sh  launchscript_debug.sh  launchscript_esfm_multi.sh  launchscript_esfm_single.sh  launchscript_intercompare.sh  launchscript_large.sh  launchscript_multi.sh  launchscript_multi_lead_debug.sh  launchscript_single.sh  probabilistic_verification_wbx.ipynb  pyproject.toml  render_single_notebook.sh  test_date_extraction.py
.github/workflows/: tests.yml
config/: debug_multi_lead.yaml  debug_run.yaml  debug_single_lead.yaml  debug_single_lead_main.yaml  example_config.yaml  full_verification_run.yaml  full_verification_run_prob.yaml  intercomparison.yaml  intercomparison_full.yaml  my_run_ifs.yaml  performance_config.yaml  test_multilead_prob.yaml
config/dev/: full_intercomparison.yaml  full_verification_run.yaml  full_verification_run_prob.yaml  multilead_intercomparison.yaml  test_multilead_det.yaml  test_multilead_prob.yaml
docs/: DEVELOPMENT.md  INSTALLATION.md  INTERCOMPARISON.md  OUTPUTS.md  WIND_UV_ASSESSMENT.md
notebooks/: deterministic_verification.ipynb  model_intercomparison.ipynb  multi_lead_demo.ipynb  probabilistic_verification.ipynb  probabilistic_verification_wbx.ipynb
src/swissclim_evaluations/: __init__.py  aggregations.py  cli.py  console.py  customizations.py  dask_utils.py  data.py  helpers.py  intercompare.py  lead_time_policy.py  metrics.py  progress.py
src/swissclim_evaluations/core/: config.py  data_selection.py  runner.py
src/swissclim_evaluations/intercomparison/: core.py
src/swissclim_evaluations/intercomparison/modules/: deterministic.py  energy_spectra.py  ets.py  fss.py  histograms.py  maps.py  multivariate.py  probabilistic.py  ssim.py  vertical_profiles.py  wd_kde.py
src/swissclim_evaluations/metrics/: deterministic.py  energy_spectra.py  ets.py  fss.py  multivariate.py  probabilistic.py  ssim.py  vertical_profiles.py  wbx.py
src/swissclim_evaluations/metrics/deterministic/: __init__.py  calc.py  orchestrator.py
src/swissclim_evaluations/metrics/probabilistic/: __init__.py  calc.py  driver.py  io.py  wbx.py
src/swissclim_evaluations/plots/: bivariate_histograms.py  deterministic.py  energy_spectra.py  histograms.py  maps.py  probabilistic.py  probabilistic_wbx.py  vertical_profiles.py  wd_kde.py
src/swissclim_evaluations/plots/probabilistic/: __init__.py  plots.py  visuals.py
tests/: __init__.py  _smoke_data.py  conftest.py  test_bivariate_smoke.py  test_build_output_filename.py  test_cli_smoke.py  test_dask_chunking_config.py  test_data_sorting.py  test_diverging_colorbar.py  test_energy_spectra_outputs.py  test_energy_spectra_per_level.py  test_energy_spectra_sph.py  test_ensemble_handling.py  test_ensemble_tokens.py  test_error_paths.py  test_ets_line_artifacts.py  test_ets_outputs.py  test_fss_metrics.py  test_gappy_init_time.py  test_golden_filenames.py  test_helpers.py  test_intercompare.py  test_latitude_weighting.py  test_lead_time_handling.py  test_lead_time_max_hour.py  test_lead_time_policy.py  test_lead_time_required_hours.py  test_members_mode_metrics.py  test_members_mode_plots.py  test_metric_value_bounds.py  test_metrics_per_lead.py  test_multi_lead_stride_artifacts.py  test_multivariate.py  test_multivariate_outputs.py  test_new_modules.py  test_output_naming.py  test_plot_modules_suffix.py  test_probabilistic_wbx_api.py  test_resilient_execution.py  test_slicing_logic.py  (+6 more)
tools/: create_synthetic_test_data.py  edf_template.toml  environment.yml  inspect_zarr.py  setup_env.sh  setup_env_conda.sh  setup_env_uenv.sh  setup_env_uv.sh  swissai.dockerfile  swissai_container.toml
