[project]
name = "swissclim-evaluations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "SwissClim Team" }]
requires-python = ">=3.11"

dependencies = [
    "bokeh>=3.5",
    "cartopy>=0.24.1",
    "dask[distributed]>=2025.2.0",
    "ipykernel>=6.29.5",
    "jinja2>=3.1",
    "matplotlib>=3.10.0,<3.11",
    "numpy>=2.0",
    "pyyaml>=6.0",
    "opt-einsum>=3.4.0",
    "pandas>=2.2",
    "pytest>=7.4",
    "scikit-image>=0.24",
    "scikit-learn>=1.5",
    "scipy>=1.15.2",
    "seaborn>=0.13",
    "setuptools>=76.0.0",
    "scores>=0.0.1",
    "tqdm>=4.67.1",
    "weatherbenchx",
    "xarray>=2024.10",
    "zarr>=2.17,<3.0.0",
]

[project.scripts]
swissclim-evaluations = "swissclim_evaluations:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# git clone weatherbenchX and remove google cloud and apache beam dependencies
[tool.uv.sources]
weatherbenchx = { path = "../weatherbenchX" }
